<?xml version="1.0" encoding="utf-8"?>
<resources>

 	<string name="app_name">Durox APP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Durox</string>
    <string name="ranklabel">"ID"</string>
    <string name="cliente">"Clientes"</string>
    <string name="nombrelabel">"Nombre : "</string>
    <string name="direccionlabel">"Dirección : "</string>
	<string name="detallelabel">"Detalle : "</string>
	<string name="editar">"Editar"</string>
	<string name="eliminar">"Eliminar"</string>
	<string name="visita">"Visita"</string>
	<string name="presupuesto">"Presupuesto"</string>
	<string name="pedido">"Pedido"</string>
	<string name="producto">"Producto"</string>
	<string name="epoca">"Epoca"</string>
	<string name="productos">"Productos"</string>
	<string name="cantidad">"Cantidad"</string>
	<string name="direccion">"Dirección"</string>
	<string name="detalle">"Detalle"</string>
	<string name="seleccionar">"Seleccionar"</string>
	<string name="fecha">"Fecha"</string>
	<string name="comentarios">"Comentarios"</string>
	<string name="guardar">" Guardar"</string>
	<string name="agregar">"Agregar"</string>
	<string name="usuario">"Usuario"</string>
	<string name="pass">"Pass"</string>
	<string name="login">"Login"</string>
	<string name="actualizar">"Actualizar"</string>
	<string name="ver">"Ver"</string>
	<string name="subir">"Subir"</string>
	<string name="bajar">" Bajar"</string>
	<string name="agregar_comentarios">"Comentarios"</string>
	
	<string name="id_back">"ID"</string>
	<string name="nombre">"Nombre"</string>
	<string name="apellido">"Apellido"</string>
	<string name="cuit">"Cuit"</string>
	<string name="id_grupo_cliente">"Grupo"</string>
	<string name="id_iva">"Iva"</string>
	<string name="imagen">"Imagen"</string>
	<string name="nombre_fantasia">"Nombre Fantasia"</string>
	<string name="razon_social">"Razón Social"</string>
	<string name="web">"Web"</string>
	<string name="date_add">"Creación"</string>
	<string name="date_upd">"Actualización"</string>
	<string name="eliminado">"Delete"</string>
	<string name="user_add">"Creación user"</string>
	<string name="user_upd">"Actualización user"</string>
	
	<string name="telefono">"Teléfono"</string>
	<string name="email">"Email"</string>
	<string name="limpiar">"Limpiar"</string>
	
	
	<string name="codigo">"Código"</string>
	<string name="codigo_lote">"Código lote"</string>
	<string name="precio">"Precio"</string>
	<string name="precio_iva">"Precio iva"</string>
	<string name="precio_min">"Precio min"</string>
	<string name="precio_min_iva">"Precio min iva"</string>
	<string name="ficha_tecnica">"Ficha técnica"</string>
	
	<string name="total">"Total"</string>
	<string name="documento">"Documento"</string>
	<string name="inicio">"Inicio"</string>
	
	<string name="aprobar">"Aprobar"</string>
	<string name="descargar">"Descargar"</string>
	<string name="descargando">"Descargando"</string>
	<string name="descargacompleta">"Descarga Completa"</string>
	<string name="valoracion">"Valoración"</string>
	<string name="ip">"IP"</string>
	<string name="cancelar">"Cancelar"</string>
	<string name="estado">"Estado"</string>
	<string name="borrar">"Borrar"</string>
	<string name="asunto">"Asunto"</string>
	<string name="mensaje">"Mensaje"</string>
	<string name="enviar">"Enviar"</string>
	<string name="enviados">"Enviados"</string>
	<string name="entrada">"Entrada"</string>
	<string name="cod_area">"Código Área"</string>
	<string name="tipo">"Tipo"</string>
	<string name="departamento">"Departamento"</string>
	<string name="provincia">"Provincia"</string>
	<string name="perfil">"Perfil"</string>
	<string name="config">"Config"</string>
	<string name="filtro">"Filtro"</string>
	<string name="ordenar">"Ordernar"</string>
	<string name="moneda">"Moneda"</string>
	<string name="condiciones_pago">"Condiciones de pago"</string>
	<string name="modos_pago">"Modos de pago"</string>
	<string name="tiempo_entrega">"Tiempos de entrega"</string>
	<string name="nota_privada">"Nota privada"</string>
	<string name="nota_publica">"Nota publica"</string>
	<string name="datos">"Datos"</string>
	<string name="logout">"Log Out"</string>
	<string name="lista">"Lista"</string>
	<string name="guardar_bajar">"Guardar y bajar"</string>
	
	
	
	<!-- Color del Texto General -->
    <color name="text_default">#666666</color>
 
    <!-- Colores del TextView -->
    <color name="text_view_default">#222222</color>
 
    <!-- Colores del Spinner -->
    <color name="spinner_selection">#666666</color>
    <color name="spinner_entries">#EF4B24</color>
 
    <!-- Colores del Boton -->
    <color name="primary">#3c8dbc</color>
    <color name="primary_p">#367fa9</color>
    <color name="primary_f">#367fa9</color>
    <color name="primary_d">#9cc1e4</color>
    
    <color name="danger">#d9534f</color>
    <color name="danger_p">#761c19</color>
    <color name="danger_f">#c9302c</color>
    
    <color name="button_text">#FFFFFF</color>
 
    <!-- Items del Spinner -->
    <string-array name="items_array">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>
	
	
</resources>
