<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo" >

    <Button
        android:id="@+id/btnAgregarComentarios"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/downloadw"
        android:onClick="actualizar_mensajes"
        android:text="@string/bajar" />
     
      <Button
        android:id="@+id/btn_entrada"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listview"
        android:layout_toLeftOf="@+id/button1"
        android:onClick="entrada_mensajes"
        android:text="@string/entrada" />

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/mensaje" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnAgregarComentarios"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search" >

    </ListView>

    <Button
        android:id="@+id/btn_enviados"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listview"
        android:layout_toRightOf="@+id/btn_entrada"
        android:onClick="enviados_mensajes"
        android:text="@string/enviados" />

</RelativeLayout>