<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/search"
        android:layout_marginLeft="38dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search"
        android:layout_marginLeft="34dp" />

    <Button
        android:id="@+id/btnAgregarComentarios"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/downloadw"
        android:onClick="actualizar_clientes"
        android:text="@string/bajar" />

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnAgregarComentarios"
        android:ems="10"
        android:hint="@string/cliente" />

    <ListView
        android:id="@+id/lvClientes"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnAgregarComentarios"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search" >

    </ListView>

    <Button
        android:id="@+id/btn_agregar"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAgregarComentarios"
        android:layout_alignBottom="@+id/btnAgregarComentarios"
        android:layout_alignParentLeft="true"
        android:onClick="agregar"
        android:text="@string/agregar" />

    <Button
        android:id="@+id/btn_orden"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvClientes"
        android:layout_toRightOf="@+id/btn_agregar"
        android:text="@string/ordenar" />

    <Button
        android:id="@+id/btn_filtro"
        style="@style/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn_orden"
       android:text="@string/filtro" />
    
</RelativeLayout>