<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnActualizar_visitas"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

   
    <AutoCompleteTextView
        android:id="@+id/autoClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/cliente">

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/autoEpocas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/autoClientes"
        android:layout_toLeftOf="@+id/btm_lpLimpiar2"
        android:ems="10"
        android:hint="@string/epoca" />

    <RatingBar
        android:id="@+id/ebValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoEpocas"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btm_lpLimpiar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/autoEpocas"
        android:layout_alignBottom="@+id/autoEpocas"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/download"
        android:onClick="actualizar_epocas" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/save"
        android:onClick="guardar"
        android:text="@string/guardar" />

    <EditText
        android:id="@+id/txtcomentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGuardar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/comentarios"
        android:inputType="textMultiLine" />

    <DatePicker
        android:id="@+id/dp_Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtcomentario"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ebValoracion" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ebValoracion"
        android:layout_alignLeft="@+id/dp_Fecha"
        android:layout_below="@+id/btm_lpLimpiar2"
        android:gravity="center_horizontal|center"
        android:text="@string/valoracion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>