<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ListView
        android:id="@+id/lvVisitas"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_vPresupuestos"
        android:layout_below="@+id/et_pBuscar" />

    <EditText
        android:id="@+id/et_pBuscar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/nombre" />

    <Button
        android:id="@+id/btn_vPresupuestos"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/presupuestos"
        android:onClick="presupuestos_lista"
        android:text="@string/presupuesto" />

    <Button
        android:id="@+id/actualizar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lvVisitas"
        android:drawableLeft="@drawable/download"
        android:onClick="actualizar_visitas"
        android:text="@string/bajar" />

</RelativeLayout>